# Frozen-Flask

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README  README.rst  pyproject.toml  run_tests  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
artwork/: LICENSE
docs/: conf.py  index.rst
docs/_static/: style.css
docs/_templates/: sidebarintro.html
flask_frozen/: __init__.py  tests.py
flask_frozen/test_app/: __init__.py
flask_frozen/test_app/admin/: __init__.py
flask_frozen/test_app/admin/templates/: admin.html
flask_frozen/test_app/static/: main.js
flaskext/: frozen.py  static.py
flaskext/frozen/: __init__.py
flaskext/frozen/tests/: __init__.py  test_content  test_content_links
flaskext/frozen/tests/test_app/: __init__.py
flaskext/frozen/tests/test_app/admin/: __init__.py
flaskext/frozen/tests/test_app/admin/static/: style.css
test_flaskstatic/: __init__.py
test_flaskstatic/test_app/: __init__.py
test_flaskstatic/test_app/admin/: __init__.py
test_frozenflask/: __init__.py
test_frozenflask/test_app/: __init__.py
tests/: test_frozen_flask.py
tests/test_app/: __init__.py
tests/test_app/admin/: __init__.py
tests/test_app/admin/admin_static/: style.css
tests/test_app/admin/templates/: admin.html
tests/test_app/static/: main.js  style.css
